--- a/real_data_gen/latex.ipynb
+++ b/real_data_gen/latex.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
     "                \"fail_rate\": \"dataset_fail_%\",\n",
     "                \"accuracy_improvement\": \"acc_\\Delta\",\n",
     "                \"fail_accuracy_improvement\": \"fail_acc_\\Delta\",\n",
-    "                \"f1_improvement\": \"f1_improvement\",\n",
+    "                \"f1_improvement\": \"f1_\\Delta\",\n",
     "                \"coin_accuracy\": \"coin_acc.\",\n",
     "                \"out_vocab_C_ratio\": \"missing_C_%\",\n",
     "                \"out_vocab_T_ratio\": \"missing_T_%\",\n",
@@ -169,12 +169,12 @@
     "                ]\n",
     "            ]\n",
     "\n",
-    "            table1.to_latex(\n",
-    "                f\"./latex/{comment_type}/toga_dataset_stats_{val}.tex\",\n",
-    "                index=False,\n",
-    "                caption=f\"TOGA* Dataset Statistics ({comment_type}), restricted to minimum {val}\\% of tokens present\",\n",
-    "                label=f\"tab:toga_stats_{val}\",\n",
-    "            )\n",
+    "            # table1.to_latex(\n",
+    "            #     f\"./latex/{comment_type}/toga_dataset_stats_{val}.tex\",\n",
+    "            #     index=False,\n",
+    "            #     caption=f\"TOGA* Dataset Statistics ({comment_type}), restricted to minimum {val}\\% of tokens present\",\n",
+    "            #     label=f\"tab:toga_stats_{val}\",\n",
+    "            # )\n",
     "            table2.to_latex(\n",
     "                f\"./latex/{comment_type}/toga_results_{val}.tex\",\n",
     "                index=False,\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,12 +208,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Vocab analysis"
+    "# Vocab threshold analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1128,7 @@
        "[26 rows x 25 columns]"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -1296,7 +1296,7 @@
        "3                          0.014                    -0.070              -0.054  "
       ]
      },
-     "execution_count": 129,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1315,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1343,12 +1343,240 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# similarity"
+    "# robustness analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for comment_type in comment_types:\n",
+    "    df = pd.read_csv(f\"./fold0/{comment_type}/project_stats_all.csv\")\n",
+    "    # Simplify project names\n",
+    "    df[\"project\"] = df.apply(lambda row: re.split(r\"-\\d\", row[\"project\"])[0], axis=1)\n",
+    "    table2 = df[[\"project\", \"N\", \"fail_accuracy_improvement\", \"accuracy_improvement\", \"f1_improvement\"]]\n",
+    "\n",
+    "    if comment_type == comment_types[0]:\n",
+    "        df_merge_comments = table2.copy()\n",
+    "    else:\n",
+    "        df_merge_comments = df_merge_comments.merge(table2, on=\"project\", how=\"left\")\n",
+    "        # print(df_merge_comments.columns)\n",
+    "    # last = comment_type\n",
+    "\n",
+    "df_merge_comments.rename(\n",
+    "    columns={\n",
+    "        \"N_x\": f\"N_{comment_types[0]}\",\n",
+    "        \"N_y\": f\"N_{comment_types[1]}\",\n",
+    "        \"N\": f\"N_{comment_types[2]}\",\n",
+    "        \"fail_accuracy_improvement_x\": f\"fail_accuracy_improvement_{comment_types[0]}\",\n",
+    "        \"fail_accuracy_improvement_y\": f\"fail_accuracy_improvement_{comment_types[1]}\",\n",
+    "        \"fail_accuracy_improvement\": f\"fail_accuracy_improvement_{comment_types[2]}\",\n",
+    "        \"accuracy_improvement_x\": f\"accuracy_improvement_{comment_types[0]}\",\n",
+    "        \"accuracy_improvement_y\": f\"accuracy_improvement_{comment_types[1]}\",\n",
+    "        \"accuracy_improvement\": f\"accuracy_improvement_{comment_types[2]}\",\n",
+    "        \"f1_improvement_x\": f\"f1_improvement_{comment_types[0]}\",\n",
+    "        \"f1_improvement_y\": f\"f1_improvement_{comment_types[1]}\",\n",
+    "        \"f1_improvement\": f\"f1_improvement_{comment_types[2]}\",\n",
+    "    },\n",
+    "    inplace=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "project_only_comments_df = df_merge_comments[df_merge_comments[\"project\"] != \"all\"]\n",
+    "min_sample = 20\n",
+    "\n",
+    "table_comment_analysis = pd.DataFrame(\n",
+    "    {\n",
+    "        \"comment_types\": [\"no_comments\", \"comments\", \"added_comments\"],\n",
+    "        \"N\": [df_merge_comments.loc[25, \"N_no_comments\"], df_merge_comments.loc[25, \"N_comments\"], df_merge_comments.loc[25, \"N_added_comments\"]],\n",
+    "        \"fail_accuracy_improvement_total\": [\n",
+    "            df_merge_comments.loc[25, \"fail_accuracy_improvement_no_comments\"],\n",
+    "            df_merge_comments.loc[25, \"fail_accuracy_improvement_comments\"],\n",
+    "            df_merge_comments.loc[25, \"fail_accuracy_improvement_added_comments\"],\n",
+    "        ],\n",
+    "        \"accuracy_improvement_total\": [\n",
+    "            df_merge_comments.loc[25, \"accuracy_improvement_no_comments\"],\n",
+    "            df_merge_comments.loc[25, \"accuracy_improvement_comments\"],\n",
+    "            df_merge_comments.loc[25, \"accuracy_improvement_added_comments\"],\n",
+    "        ],\n",
+    "        \"f1_improvement_total\": [\n",
+    "            df_merge_comments.loc[25, \"f1_improvement_no_comments\"],\n",
+    "            df_merge_comments.loc[25, \"f1_improvement_comments\"],\n",
+    "            df_merge_comments.loc[25, \"f1_improvement_added_comments\"],\n",
+    "        ],\n",
+    "        \"fail_accuracy_improvement_avg\": [\n",
+    "            df_merge_comments.loc[project_only_comments_df[project_only_comments_df[\"N_no_comments\"]>min_sample].index, \"fail_accuracy_improvement_no_comments\"].mean(),\n",
+    "            df_merge_comments.loc[project_only_comments_df[project_only_comments_df[\"N_comments\"]>min_sample].index, \"fail_accuracy_improvement_comments\"].mean(),\n",
+    "            df_merge_comments.loc[project_only_comments_df[project_only_comments_df[\"N_added_comments\"]>min_sample].index, \"fail_accuracy_improvement_added_comments\"].mean(),\n",
+    "        ],\n",
+    "        \"accuracy_improvement_avg\": [\n",
+    "            df_merge_comments.loc[project_only_comments_df[project_only_comments_df[\"N_no_comments\"]>min_sample].index, \"accuracy_improvement_no_comments\"].mean(),\n",
+    "            df_merge_comments.loc[project_only_comments_df[project_only_comments_df[\"N_comments\"]>min_sample].index, \"accuracy_improvement_comments\"].mean(),\n",
+    "            df_merge_comments.loc[project_only_comments_df[project_only_comments_df[\"N_added_comments\"]>min_sample].index, \"accuracy_improvement_added_comments\"].mean(),\n",
+    "        ],\n",
+    "        \"f1_improvement_avg\": [\n",
+    "            df_merge_comments.loc[project_only_comments_df[project_only_comments_df[\"N_no_comments\"]>min_sample].index, \"f1_improvement_no_comments\"].mean(),\n",
+    "            df_merge_comments.loc[project_only_comments_df[project_only_comments_df[\"N_comments\"]>min_sample].index, \"f1_improvement_comments\"].mean(),\n",
+    "            df_merge_comments.loc[project_only_comments_df[project_only_comments_df[\"N_added_comments\"]>min_sample].index, \"f1_improvement_added_comments\"].mean(),\n",
+    "        ],\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "table_comment_analysis = table_comment_analysis.astype({\"N\": int})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>comment_types</th>\n",
+       "      <th>N</th>\n",
+       "      <th>fail_accuracy_improvement_total</th>\n",
+       "      <th>accuracy_improvement_total</th>\n",
+       "      <th>f1_improvement_total</th>\n",
+       "      <th>fail_accuracy_improvement_avg</th>\n",
+       "      <th>accuracy_improvement_avg</th>\n",
+       "      <th>f1_improvement_avg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>no_comments</td>\n",
+       "      <td>169099</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>comments</td>\n",
+       "      <td>169099</td>\n",
+       "      <td>0.0055</td>\n",
+       "      <td>-0.0002</td>\n",
+       "      <td>-0.0002</td>\n",
+       "      <td>0.0054</td>\n",
+       "      <td>-0.0002</td>\n",
+       "      <td>-0.0003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>added_comments</td>\n",
+       "      <td>169099</td>\n",
+       "      <td>0.0002</td>\n",
+       "      <td>-0.0001</td>\n",
+       "      <td>-0.0001</td>\n",
+       "      <td>0.0003</td>\n",
+       "      <td>-0.0003</td>\n",
+       "      <td>-0.0002</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    comment_types       N  fail_accuracy_improvement_total  \\\n",
+       "0     no_comments  169099                           0.0000   \n",
+       "1        comments  169099                           0.0055   \n",
+       "2  added_comments  169099                           0.0002   \n",
+       "\n",
+       "   accuracy_improvement_total  f1_improvement_total  \\\n",
+       "0                      0.0000                0.0000   \n",
+       "1                     -0.0002               -0.0002   \n",
+       "2                     -0.0001               -0.0001   \n",
+       "\n",
+       "   fail_accuracy_improvement_avg  accuracy_improvement_avg  f1_improvement_avg  \n",
+       "0                         0.0000                    0.0000              0.0000  \n",
+       "1                         0.0054                   -0.0002             -0.0003  \n",
+       "2                         0.0003                   -0.0003             -0.0002  "
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for col in [\"fail_accuracy_improvement_total\", \"accuracy_improvement_total\", \"f1_improvement_total\"]:\n",
+    "    string = \"_\".join(col.split(\"_\")[:-1])\n",
+    "    table_comment_analysis[col] = table_comment_analysis[col].apply(lambda x: np.round(x - df_merge_comments.loc[25, f\"{string}_no_comments\"], 4))\n",
+    "\n",
+    "for col in [\"fail_accuracy_improvement_avg\", \"accuracy_improvement_avg\", \"f1_improvement_avg\"]:\n",
+    "    string = \"_\".join(col.split(\"_\")[:-1])\n",
+    "    table_comment_analysis[col] = table_comment_analysis[col].apply(lambda x: np.round(x - project_only_comments_df[f\"{string}_no_comments\"].mean(), 4))\n",
+    "\n",
+    "table_comment_analysis"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table_comment_analysis.to_latex(\n",
+    "    f\"./latex/comment_analysis.tex\",\n",
+    "    index=False,\n",
+    "    caption=f\"Performance of SEER on TOGA* with different comment types.\",\n",
+    "    label=f\"tab:comment_analysis\",\n",
+    ")\n",
+    "\n",
+    "with open(f\"./latex/comment_analysis.tex\", \"r+\") as f:\n",
+    "    text = f.read()\n",
+    "    text = re.sub(\"table\", \"table*\", text)\n",
+    "    text = re.sub(\"accuracy\", \"acc.\", text)\n",
+    "    text = re.sub(\"_improvement\", \"_$\\Delta$\", text)\n",
+    "    text = re.sub(\"_total\", \"_all\", text)\n",
+    "    text = re.sub(\"_avg\", \"_project\\_avg\", text)\n",
+    "    f.seek(0)\n",
+    "    f.write(text)\n",
+    "    f.truncate()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# similarity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
