--- a/real_data_gen/latex.ipynb
+++ b/real_data_gen/latex.ipynb
@@ -2,7 +2,7 @@
     "cells": [
         {
             "cell_type": "code",
-            "execution_count": 165,
+            "execution_count": 29,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -11,12 +11,12 @@
                 "import os\n",
                 "import numpy as np\n",
                 "\n",
-                "comment_types = [\"no_comments\", \"comments\", \"added_comments\"]"
+                "comment_types = [\"no_comments\", \"comments\", \"added_test_comments\", \"added_code_comments\", \"added_CT_comments\"]"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 166,
+            "execution_count": 30,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -77,7 +77,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 167,
+            "execution_count": 31,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -185,7 +185,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 168,
+            "execution_count": 32,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -213,7 +213,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 169,
+            "execution_count": 33,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -251,7 +251,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 170,
+            "execution_count": 34,
             "metadata": {},
             "outputs": [
                 {
@@ -1128,7 +1128,7 @@
                             "[26 rows x 25 columns]"
                         ]
                     },
-                    "execution_count": 170,
+                    "execution_count": 34,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -1139,7 +1139,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 171,
+            "execution_count": 35,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -1193,7 +1193,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 172,
+            "execution_count": 36,
             "metadata": {},
             "outputs": [
                 {
@@ -1296,7 +1296,7 @@
                             "3                          0.014                    -0.070              -0.054  "
                         ]
                     },
-                    "execution_count": 172,
+                    "execution_count": 36,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -1315,7 +1315,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 173,
+            "execution_count": 37,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -1348,7 +1348,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 174,
+            "execution_count": 38,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -1356,7 +1356,16 @@
                 "    df = pd.read_csv(f\"./fold0/{comment_type}/project_stats_all.csv\")\n",
                 "    # Simplify project names\n",
                 "    df[\"project\"] = df.apply(lambda row: re.split(r\"-\\d\", row[\"project\"])[0], axis=1)\n",
-                "    table2 = df[[\"project\", \"N\", \"fail_accuracy_improvement\", \"accuracy_improvement\", \"f1_improvement\"]]\n",
+                "    table2 = df[[\"project\", \"N\", \"fail_accuracy_improvement\", \"accuracy_improvement\", \"f1_improvement\"]].copy()\n",
+                "    table2.rename(\n",
+                "        columns={\n",
+                "            \"N\": f\"N_{comment_type}\",\n",
+                "            \"fail_accuracy_improvement\": f\"fail_accuracy_improvement_{comment_type}\",\n",
+                "            \"accuracy_improvement\": f\"accuracy_improvement_{comment_type}\",\n",
+                "            \"f1_improvement\": f\"f1_improvement_{comment_type}\",\n",
+                "        },\n",
+                "        inplace=True,\n",
+                "    )\n",
                 "\n",
                 "    if comment_type == comment_types[0]:\n",
                 "        df_merge_comments = table2.copy()\n",
@@ -1365,28 +1374,28 @@
                 "        # print(df_merge_comments.columns)\n",
                 "    # last = comment_type\n",
                 "\n",
-                "df_merge_comments.rename(\n",
-                "    columns={\n",
-                "        \"N_x\": f\"N_{comment_types[0]}\",\n",
-                "        \"N_y\": f\"N_{comment_types[1]}\",\n",
-                "        \"N\": f\"N_{comment_types[2]}\",\n",
-                "        \"fail_accuracy_improvement_x\": f\"fail_accuracy_improvement_{comment_types[0]}\",\n",
-                "        \"fail_accuracy_improvement_y\": f\"fail_accuracy_improvement_{comment_types[1]}\",\n",
-                "        \"fail_accuracy_improvement\": f\"fail_accuracy_improvement_{comment_types[2]}\",\n",
-                "        \"accuracy_improvement_x\": f\"accuracy_improvement_{comment_types[0]}\",\n",
-                "        \"accuracy_improvement_y\": f\"accuracy_improvement_{comment_types[1]}\",\n",
-                "        \"accuracy_improvement\": f\"accuracy_improvement_{comment_types[2]}\",\n",
-                "        \"f1_improvement_x\": f\"f1_improvement_{comment_types[0]}\",\n",
-                "        \"f1_improvement_y\": f\"f1_improvement_{comment_types[1]}\",\n",
-                "        \"f1_improvement\": f\"f1_improvement_{comment_types[2]}\",\n",
-                "    },\n",
-                "    inplace=True,\n",
-                ")"
+                "# df_merge_comments.rename(\n",
+                "#     columns={\n",
+                "#         \"N_x\": f\"N_{comment_types[0]}\",\n",
+                "#         \"N_y\": f\"N_{comment_types[1]}\",\n",
+                "#         \"N\": f\"N_{comment_types[2]}\",\n",
+                "#         \"fail_accuracy_improvement_x\": f\"fail_accuracy_improvement_{comment_types[0]}\",\n",
+                "#         \"fail_accuracy_improvement_y\": f\"fail_accuracy_improvement_{comment_types[1]}\",\n",
+                "#         \"fail_accuracy_improvement\": f\"fail_accuracy_improvement_{comment_types[2]}\",\n",
+                "#         \"accuracy_improvement_x\": f\"accuracy_improvement_{comment_types[0]}\",\n",
+                "#         \"accuracy_improvement_y\": f\"accuracy_improvement_{comment_types[1]}\",\n",
+                "#         \"accuracy_improvement\": f\"accuracy_improvement_{comment_types[2]}\",\n",
+                "#         \"f1_improvement_x\": f\"f1_improvement_{comment_types[0]}\",\n",
+                "#         \"f1_improvement_y\": f\"f1_improvement_{comment_types[1]}\",\n",
+                "#         \"f1_improvement\": f\"f1_improvement_{comment_types[2]}\",\n",
+                "#     },\n",
+                "#     inplace=True,\n",
+                "# )"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 175,
+            "execution_count": 39,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -1395,38 +1404,14 @@
                 "\n",
                 "table_comment_analysis = pd.DataFrame(\n",
                 "    {\n",
-                "        \"comment_types\": [\"no_comments\", \"comments\", \"added_comments\"],\n",
-                "        \"N\": [df_merge_comments.loc[25, \"N_no_comments\"], df_merge_comments.loc[25, \"N_comments\"], df_merge_comments.loc[25, \"N_added_comments\"]],\n",
-                "        \"fail_accuracy_improvement_total\": [\n",
-                "            df_merge_comments.loc[25, \"fail_accuracy_improvement_no_comments\"],\n",
-                "            df_merge_comments.loc[25, \"fail_accuracy_improvement_comments\"],\n",
-                "            df_merge_comments.loc[25, \"fail_accuracy_improvement_added_comments\"],\n",
-                "        ],\n",
-                "        \"accuracy_improvement_total\": [\n",
-                "            df_merge_comments.loc[25, \"accuracy_improvement_no_comments\"],\n",
-                "            df_merge_comments.loc[25, \"accuracy_improvement_comments\"],\n",
-                "            df_merge_comments.loc[25, \"accuracy_improvement_added_comments\"],\n",
-                "        ],\n",
-                "        \"f1_improvement_total\": [\n",
-                "            df_merge_comments.loc[25, \"f1_improvement_no_comments\"],\n",
-                "            df_merge_comments.loc[25, \"f1_improvement_comments\"],\n",
-                "            df_merge_comments.loc[25, \"f1_improvement_added_comments\"],\n",
-                "        ],\n",
-                "        \"fail_accuracy_improvement_avg\": [\n",
-                "            df_merge_comments.loc[project_only_comments_df[project_only_comments_df[\"N_no_comments\"]>min_sample].index, \"fail_accuracy_improvement_no_comments\"].mean(),\n",
-                "            df_merge_comments.loc[project_only_comments_df[project_only_comments_df[\"N_comments\"]>min_sample].index, \"fail_accuracy_improvement_comments\"].mean(),\n",
-                "            df_merge_comments.loc[project_only_comments_df[project_only_comments_df[\"N_added_comments\"]>min_sample].index, \"fail_accuracy_improvement_added_comments\"].mean(),\n",
-                "        ],\n",
-                "        \"accuracy_improvement_avg\": [\n",
-                "            df_merge_comments.loc[project_only_comments_df[project_only_comments_df[\"N_no_comments\"]>min_sample].index, \"accuracy_improvement_no_comments\"].mean(),\n",
-                "            df_merge_comments.loc[project_only_comments_df[project_only_comments_df[\"N_comments\"]>min_sample].index, \"accuracy_improvement_comments\"].mean(),\n",
-                "            df_merge_comments.loc[project_only_comments_df[project_only_comments_df[\"N_added_comments\"]>min_sample].index, \"accuracy_improvement_added_comments\"].mean(),\n",
-                "        ],\n",
-                "        \"f1_improvement_avg\": [\n",
-                "            df_merge_comments.loc[project_only_comments_df[project_only_comments_df[\"N_no_comments\"]>min_sample].index, \"f1_improvement_no_comments\"].mean(),\n",
-                "            df_merge_comments.loc[project_only_comments_df[project_only_comments_df[\"N_comments\"]>min_sample].index, \"f1_improvement_comments\"].mean(),\n",
-                "            df_merge_comments.loc[project_only_comments_df[project_only_comments_df[\"N_added_comments\"]>min_sample].index, \"f1_improvement_added_comments\"].mean(),\n",
-                "        ],\n",
+                "        \"comment_types\": comment_types,\n",
+                "        \"N\": [ df_merge_comments.loc[25, f\"N_{comment_type}\"] for comment_type in comment_types],\n",
+                "        \"fail_accuracy_improvement_total\": [df_merge_comments.loc[25, f\"fail_accuracy_improvement_{comment_type}\"] for comment_type in comment_types],\n",
+                "        \"accuracy_improvement_total\": [df_merge_comments.loc[25, f\"accuracy_improvement_{comment_type}\"] for comment_type in comment_types],\n",
+                "        \"f1_improvement_total\": [df_merge_comments.loc[25, f\"f1_improvement_{comment_type}\"] for comment_type in comment_types],\n",
+                "        \"fail_accuracy_improvement_avg\": [df_merge_comments.loc[project_only_comments_df[project_only_comments_df[f\"N_{comment_type}\"]>min_sample].index, f\"fail_accuracy_improvement_{comment_type}\"].mean() for comment_type in comment_types],\n",
+                "        \"accuracy_improvement_avg\": [df_merge_comments.loc[project_only_comments_df[project_only_comments_df[f\"N_{comment_type}\"]>min_sample].index, f\"accuracy_improvement_{comment_type}\"].mean() for comment_type in comment_types],\n",
+                "        \"f1_improvement_avg\": [df_merge_comments.loc[project_only_comments_df[project_only_comments_df[f\"N_{comment_type}\"]>min_sample].index, f\"f1_improvement_{comment_type}\"].mean() for comment_type in comment_types],\n",
                 "    }\n",
                 ")\n",
                 "\n",
@@ -1435,7 +1420,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 176,
+            "execution_count": 40,
             "metadata": {},
             "outputs": [
                 {
@@ -1494,37 +1479,65 @@
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>2</th>\n",
-                            "      <td>added_comments</td>\n",
+                            "      <td>added_test_comments</td>\n",
                             "      <td>169099</td>\n",
-                            "      <td>0.0002</td>\n",
-                            "      <td>-0.0001</td>\n",
-                            "      <td>-0.0001</td>\n",
+                            "      <td>-0.0086</td>\n",
+                            "      <td>0.0005</td>\n",
                             "      <td>0.0003</td>\n",
-                            "      <td>-0.0003</td>\n",
-                            "      <td>-0.0002</td>\n",
+                            "      <td>-0.0093</td>\n",
+                            "      <td>-0.0017</td>\n",
+                            "      <td>-0.0013</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>3</th>\n",
+                            "      <td>added_code_comments</td>\n",
+                            "      <td>169099</td>\n",
+                            "      <td>-0.0446</td>\n",
+                            "      <td>0.0096</td>\n",
+                            "      <td>0.0055</td>\n",
+                            "      <td>-0.0452</td>\n",
+                            "      <td>0.0291</td>\n",
+                            "      <td>0.0238</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>4</th>\n",
+                            "      <td>added_CT_comments</td>\n",
+                            "      <td>169099</td>\n",
+                            "      <td>-0.0558</td>\n",
+                            "      <td>0.0135</td>\n",
+                            "      <td>0.0077</td>\n",
+                            "      <td>-0.0530</td>\n",
+                            "      <td>0.0318</td>\n",
+                            "      <td>0.0256</td>\n",
                             "    </tr>\n",
                             "  </tbody>\n",
                             "</table>\n",
                             "</div>"
                         ],
                         "text/plain": [
-                            "    comment_types       N  fail_accuracy_improvement_total  \\\n",
-                            "0     no_comments  169099                           0.0000   \n",
-                            "1        comments  169099                           0.0055   \n",
-                            "2  added_comments  169099                           0.0002   \n",
+                            "         comment_types       N  fail_accuracy_improvement_total  \\\n",
+                            "0          no_comments  169099                           0.0000   \n",
+                            "1             comments  169099                           0.0055   \n",
+                            "2  added_test_comments  169099                          -0.0086   \n",
+                            "3  added_code_comments  169099                          -0.0446   \n",
+                            "4    added_CT_comments  169099                          -0.0558   \n",
                             "\n",
                             "   accuracy_improvement_total  f1_improvement_total  \\\n",
                             "0                      0.0000                0.0000   \n",
                             "1                     -0.0002               -0.0002   \n",
-                            "2                     -0.0001               -0.0001   \n",
+                            "2                      0.0005                0.0003   \n",
+                            "3                      0.0096                0.0055   \n",
+                            "4                      0.0135                0.0077   \n",
                             "\n",
                             "   fail_accuracy_improvement_avg  accuracy_improvement_avg  f1_improvement_avg  \n",
                             "0                         0.0000                    0.0000              0.0000  \n",
                             "1                         0.0054                   -0.0002             -0.0003  \n",
-                            "2                         0.0003                   -0.0003             -0.0002  "
+                            "2                        -0.0093                   -0.0017             -0.0013  \n",
+                            "3                        -0.0452                    0.0291              0.0238  \n",
+                            "4                        -0.0530                    0.0318              0.0256  "
                         ]
                     },
-                    "execution_count": 176,
+                    "execution_count": 40,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -1543,7 +1556,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 41,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -1576,7 +1589,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 178,
+            "execution_count": 42,
             "metadata": {},
             "outputs": [],
             "source": [
